mockers_derive/tests/compile-fail/parent_ref.rs
use mockers_derive::mocked;

trait A {}

#[mocked]
trait B : A {}

fn main() {}
